25 March 2019: Wouter
	- Fix that tls-session-ticket-keys: "" on its own in unbound.conf
	  disables the tls session ticker key calls into the OpenSSL API.
	- Fix crash if tls-servic-pem not filled in when necessary.

21 March 2019: Wouter
	- Fix #4240: Fix whitespace cleanup in example.conf.

19 March 2019: Wouter
	- add type CAA to libpyunbound (accessing libunbound from python).

18 March 2019: Wouter
	- Add log message, at verbosity 4, that says the query is encrypted
	  with TLS, if that is enabled for the query.
	- Fix #4239: set NOTIMPL when deny-any is enabled, for RFC8482.

7 March 2019: Wouter
	- Fix for #4233: guard use of NDEBUG, so that it can be passed in
	  CFLAGS into configure.

5 March 2019: Wouter
	- Tag release 1.9.1rc1.  Which became 1.9.1 on 12 March 2019.  Trunk
	  has 1.9.2 in development.

1 March 2019: Wouter
	- output forwarder log in ssl_req_order test.

28 February 2019: Wouter
	- Remove memory leak on pythonmod python2 script file init.
	- Remove swig gcc8 python function cast warnings, they are ignored.
	- Print correct module that failed when module-config is wrong.

27 February 2019: Wouter
	- Fix #4229: Unbound man pages lack information, about access-control
	  order and local zone tags, and elements in views.
	- Fix #14: contrib/unbound.init: Fix wrong comparison judgment
	  before copying.
	- Fix for python module on Windows, fix fopen.

25 February 2019: Wouter
	- Fix #4227: pair event del and add for libevent for tcp_req_info.

21 February 2019: Wouter
	- Fix the error for unknown module in module-config is understandable,
	  and explains it was not compiled in and where to see the list.
	- In example.conf explain where to put cachedb module in module-config.
	- In man page and example config explain that most modules have to
	  be listed at the start of module-config.

20 February 2019: Wouter
	- Fix pythonmod include and sockaddr_un ifdefs for compile on
	  Windows, and for libunbound.

18 February 2019: Wouter